--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,91 @@
 <body>
 <nav>
 <ul>
-<li> <a href="index.html"> &#127968; Home</a></li>
-<li ><a href="catalog.html">&#128203; Catalog</a></li>
-<li><a href="events.html">&#127881;  Events</a></li>
-<li > <a class=active  href="contact.html"> &#128222; Contact</a></li>
+<li> <a href="index.html"> &#127968; Home</a>
+    <div class="dropdown-content">
+
+    <ul>
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+    </ul>
+
+</div>
+</li>
+<li ><a href="catalog.html">&#128203; Catalog</a>  <div class="dropdown-content">
+
+    <ul>
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+    </ul>
+
+</div>
+</li>
+<li><a href="events.html">&#127881;  Events</a>  <div class="dropdown-content">
+
+    <ul>
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+    </ul>
+
+</div>
+</li>
+<li > <a class=active  href="contact.html"> &#128222; Contact</a>  <div class="dropdown-content">
+
+    <ul>
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+
+        <li>
+            <a href="">Link</a>
+
+        </li>
+    </ul>
+
+</div>
+</li>
 </ul>
 </nav>
 
